# price-spread-monitor

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
docker/: prometheus.yml
grafana/dashboards/: spread-dashboard.json
src/: __init__.py  monitor.py
src/exchange/: streams.py
src/metrics/: prometheus.py
