[project]
name = "price-spread-monitor"
version = "0.1.0"
description = "OKX and Aster BTC price spread monitoring service"
authors = [{name = "Chuck Gao", email = "chuckgao68686@gmail.com"}]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.8.0",
    "websockets>=11.0",
    "prometheus-client>=0.17.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]